--- a/portfolio/games/resourcegame.html
+++ b/portfolio/games/resourcegame.html
@@ -31,7 +31,7 @@
         </nav>
     </header>
 
-    <a href="../games.html"><i class="fas fa-arrow-left"></i> Back</a>
+    <a href="../games.html"><i class="fas fa-arrow-left"></i></a>
 
     <h1>My Farm: Resource Management Game</h1>
     
@@ -77,7 +77,7 @@
 
     <button id="downloadBtn2">Download Resource Game</button>
 
-    <a href="../games/sushigo.html"><i class="fas fa-arrow-left"></i> Back to SushiGo</a>
+    <a href="../games/sushigo.html"><i class="fas fa-arrow-left"></i></a>
 
     <footer>
         <div class="footer">
